--- a/math_arainoriko.ipynb
+++ b/math_arainoriko.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "math_arainoriko.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMShkTYYu3yXwXNxC6b3DWQ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPtrwSg3syF8UQcrrGSbk62",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,11 +34,7 @@
         "id": "VoF4b0UG5cHf"
       },
       "source": [
-        "メモ\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n",
+        "# メモ\n",
         "\n",
         "数学は言葉\n",
         "\n",
@@ -444,7 +441,62 @@
         "p.75\n",
         "\n",
         "$x \\lt y, x=y, x \\gt y$ のどれか**ひとつだけ**が必ず成り立つ。  \n",
-        "$(x \\lt y \\lor x=y \\lor x \\gt y) \\land \\neg (x \\lt y \\land x=y) \\land \\neg (x=y \\land x \\gt y) \\land \\neg (x \\gt y \\land x \\gt y)$"
+        "$(x \\lt y \\lor x=y \\lor x \\gt y) \\land \\neg (x \\lt y \\land x=y) \\land \\neg (x=y \\land x \\gt y) \\land \\neg (x \\gt y \\land x \\gt y)$\n",
+        "\n",
+        "または\n",
+        "\n",
+        "$(x \\lt y \\land \\neg (x=y) \\land \\neg (x \\gt y)) \\lor(\\neg (x \\lt y) \\land x=y  \\land \\neg (x \\gt y)) \\lor(\\neg (x \\lt y) \\land \\neg (x=y)  \\land x \\gt y) $"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "egSlhP_4N2xh"
+      },
+      "source": [
+        "---\n",
+        "例題 3.2.7\n",
+        "\n",
+        "p.81\n",
+        "\n",
+        "$\\log_3 5$ は無理数である。  \n",
+        "$\\log_3 5 \\not \\in \\mathbb Q$\n",
+        "\n",
+        "証明\n",
+        "\n",
+        "$x$ は有理数であるは次のように書ける。\n",
+        "\n",
+        "$\\exists m \\in \\mathbb Z\\;\\; \\exists \\in \\mathbb N\\;\\; (x = \\displaystyle \\frac m n)$\n",
+        "\n",
+        "したがって課題は次のように書ける。\n",
+        "\n",
+        "$\\neg\\;\\left (\\exists m \\in \\mathbb Z\\;\\; \\exists \\in \\mathbb N\\;\\; \\left (\\log_3 5 = \\displaystyle \\frac m n \\right )\\right )$\n",
+        "\n",
+        "有理数と仮定すると矛盾することを証明する。\n",
+        "\n",
+        "$$\n",
+        "\\begin{array}{lcl}\n",
+        "log_3 5 &=& \\frac m n \\\\\n",
+        "3^{\\frac m n} &=& 5 \\\\\n",
+        "3^m &=& 5^n\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "左辺は 3 で割り切れるが右辺は 3 で割り切れないので矛盾する。\n",
+        "\n",
+        "よって、$\\log_3 5$ は無理数である。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N-FgFFmvSfpl"
+      },
+      "source": [
+        "p.84\n",
+        "\n",
+        "$\\triangle ABC$"
       ]
     }
   ]
