Colaboratory を使用して作成しました

--- a/math_arainoriko.ipynb
+++ b/math_arainoriko.ipynb
@@ -6,7 +6,7 @@
       "name": "math_arainoriko.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtrwSg3syF8UQcrrGSbk62",
+      "authorship_tag": "ABX9TyPiTV2fTu6e07b1NJ0ON5a6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -496,7 +496,25 @@
       "source": [
         "p.84\n",
         "\n",
-        "$\\triangle ABC$"
+        "$\\triangle ABC$ の 2 辺が等しく、その間のなす角の大きさが60度のとき $\\triangle ABC$ は正三角形である。\n",
+        "$|AB| =|AC| \\land \\angle A = 60^\\circ \\implies \\angle B = 60^\\circ \\land \\angle C = 60^\\circ $\n",
+        "\n",
+        "証明\n",
+        "\n",
+        "二等辺三角形は左右対称なので、$\\angle B = \\angle C$。 三角形の内角の和は $180^\\circ$。 $\\frac {180 - 60}{2} = 60$ により、$\\angle B = 60^\\circ \\land \\angle C = 60^\\circ $ "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nfBSa_tlsB27"
+      },
+      "source": [
+        "p.84\n",
+        "\n",
+        "$a,b$ を整数とし、$0 \\lt b$ とする、その時、\n",
+        "$$ a = bq +r \\land 0 \\leq r \\lt b$$\n",
+        "を満たす"
       ]
     }
   ]
