--- a/math_discrete_moriyaetsuro.ipynb
+++ b/math_discrete_moriyaetsuro.ipynb
@@ -6,7 +6,7 @@
       "name": "math_discrete_moriyaetsuro.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqKCK3JJu18nKEpOrOwdGF",
+      "authorship_tag": "ABX9TyOaUAigqbv2TlJOH1SvjOCl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,15 +390,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FjxDL_Sa7RC1"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "5akkt_xpjSVB"
       },
       "source": [
@@ -414,9 +405,33 @@
         "\n",
         "$x,y \\in \\boldsymbol Z$ のとき、$z$ が $x$ と $y$ の最大公約数であること ($z=\\gcd (x,y)$) は次のように定義することができる:\n",
         "\n",
-        "$\\quad\\quad z=\\gcd(x,y) \\overset{\\text{def}}{\\iff} z | x \\land z | y \\land \\not \\exists w \\in \\boldsymbol z [w |x \\land w|y \\land z < w]$\n",
+        "$\\quad\\quad z=\\gcd(x,y) \\overset{\\text{def}}{\\iff} z | x \\land z | y \\land \\not \\exists w \\in \\boldsymbol Z [w |x \\land w|y \\land z < w]$\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EFhB5S08x-Kl"
+      },
+      "source": [
+        "---\n",
+        "メモ $\\quad$ ちょっとわかりにくいので考える。\n",
         "\n",
-        "&nbsp;\n"
+        "$z | x \\land z | y \\land \\neg [\\exists w  [w |x \\land w|y \\land z < w]]$\n",
+        "\n",
+        "ということか。 角括弧が入れ子になるのはしかたないかな。\n",
+        "\n",
+        "$z|x$ という割り切れる表記も慣れる必要がある。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0re4oajnznQc"
+      },
+      "source": [
+        "# いまここなう"
       ]
     },
     {
@@ -425,11 +440,17 @@
         "id": "ydVLlvnPsYn3"
       },
       "source": [
+        "---\n",
         "理解度確認問題 1.1 p.6 次の集合の元をすべて示す\n",
         "\n",
         "(1) $\\{n\\in \\boldsymbol N \\ |\\ n = n^2\\}$ #=> {0,1}\n",
         "\n",
+        "自然数 (0 を含む) でそれとそれ自身の 2 乗が等しい数の集合。\n",
+        "\n",
+        "\n",
         "(2) $\\{n\\in \\boldsymbol Z \\ |\\ n^3 + 1 = 0\\}$ #=> {-1}\n",
+        "\n",
+        "整数で 3 乗すると -1 になる数の集合\n",
         "\n",
         "(3) $\\{2n+1 \\ |\\ n は 10 以下の素数\\}$ #=> {5,7,11,15}\n",
         "\n",
