--- a/algebra_hazama.ipynb
+++ b/algebra_hazama.ipynb
@@ -35,7 +35,6 @@
     "colab": {
       "name": "algebra_hazama.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -736,13 +735,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "hvFFfya9ODp5",
-        "outputId": "2b6b6b39-18d7-41e3-a37f-cef98947bc86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2b6b6b39-18d7-41e3-a37f-cef98947bc86"
       },
       "source": [
         "# mobiusrange(a,b) # b is outside of range\n",
+        "# 下の例では 7,8,9,10,11,12,13,14,15,16,17 についてメビウス関数の値を示す\n",
+        "# メビウス関数は素因数分解して中に平方を含んでいれば 0 => 8,9,12,16\n",
+        "# 因子が奇数個の場合は -1 => 7,11,13,17\n",
+        "# 因子が偶数個の場合は 1 => 10,14,15\n",
+        "# 従って素数とは関係ない\n",
         "from sympy import sieve\n",
         "print([i for i in sieve.mobiusrange(7, 18)])\n"
       ],
@@ -756,6 +760,153 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SwYeDn1vCaZ3",
+        "outputId": "11abd72e-ad09-41e0-f610-145e8f010ec1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        }
+      },
+      "source": [
+        "# primerange\n",
+        "from sympy import sieve\n",
+        "print([i for i in sieve.primerange(7, 18)])"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[7, 11, 13, 17]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-261423956873>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msieve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msieve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprimerange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m18\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msieve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprimerange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m19\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: primerange() missing 1 required positional argument: 'b'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tg6BMBnyDF44",
+        "outputId": "f08aa3f6-33fd-440b-d36c-e2bd6ec9ab26",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# primerange と同じものを書いてみる\n",
+        "from sympy import sieve\n",
+        "n=30\n",
+        "sieve.extend_to_no(n)\n",
+        "display([i for i in sieve._list if (i >= 7) & (i < 18)])"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[7, 11, 13, 17]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GPKADkdgGzLw",
+        "outputId": "ca5f237d-055f-42e9-da1f-abd982d646f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "source": [
+        "# search 与えられた値の上下の素数を tuple で返す\n",
+        "from sympy import sieve\n",
+        "n = 8\n",
+        "display(sieve.search(n))\n",
+        "a, b = sieve.search(n)\n",
+        "display(sieve[a], sieve[b])"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "(4, 5)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fT3836j7IPRC"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X4Y7dYMOIAGQ"
+      },
+      "source": [
+        "# totient 関数 \n",
+        "オイラーのトーシェント関数（オイラーのトーシェントかんすう、英: Euler's totient function[2]）とは、\n",
+        "正の整数 n に対して、 n と互いに素である 1 以上 n 以下の自然数\n",
+        "の個数 φ(n) を与える数論的関数 φ である。これは"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
