Colaboratory を使用して作成しました

--- a/algebra_hazama.ipynb
+++ b/algebra_hazama.ipynb
@@ -35,6 +35,7 @@
     "colab": {
       "name": "algebra_hazama.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -765,18 +766,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "SwYeDn1vCaZ3",
-        "outputId": "11abd72e-ad09-41e0-f610-145e8f010ec1",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 224
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e0b4d937-a52c-4bda-dab2-81a319d9ce7a"
       },
       "source": [
         "# primerange\n",
         "from sympy import sieve\n",
         "print([i for i in sieve.primerange(7, 18)])"
       ],
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,29 +784,18 @@
             "[7, 11, 13, 17]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-261423956873>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msieve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msieve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprimerange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m18\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msieve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprimerange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m19\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: primerange() missing 1 required positional argument: 'b'"
-          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Tg6BMBnyDF44",
-        "outputId": "f08aa3f6-33fd-440b-d36c-e2bd6ec9ab26",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "Tg6BMBnyDF44",
+        "outputId": "f08aa3f6-33fd-440b-d36c-e2bd6ec9ab26"
       },
       "source": [
         "# primerange と同じものを書いてみる\n",
@@ -833,12 +822,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GPKADkdgGzLw",
-        "outputId": "ca5f237d-055f-42e9-da1f-abd982d646f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        }
+        },
+        "id": "GPKADkdgGzLw",
+        "outputId": "ca5f237d-055f-42e9-da1f-abd982d646f1"
       },
       "source": [
         "# search 与えられた値の上下の素数を tuple で返す\n",
@@ -888,25 +877,283 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fT3836j7IPRC"
+        "id": "X4Y7dYMOIAGQ"
       },
       "source": [
-        ""
+        "totient\n",
+        "\n",
+        "オイラーのトーシェント関数とは、正の整数 $n$ に対して、 $n$ と互いに素である 1 以上 $n$ 以下の自然数の個数 $\\varphi (n)$ を与える数論的関数 $\\varphi$ である\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X4Y7dYMOIAGQ"
+        "id": "eXYkm4qRfMD3",
+        "outputId": "5bd2910b-9867-4813-8b54-a31275654f9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# totient 関数 \n",
-        "オイラーのトーシェント関数（オイラーのトーシェントかんすう、英: Euler's totient function[2]）とは、\n",
-        "正の整数 n に対して、 n と互いに素である 1 以上 n 以下の自然数\n",
-        "の個数 φ(n) を与える数論的関数 φ である。これは"
+        "# totientrange range について totient 数を返す\n",
+        "# 素数の場合 n-1 個になる\n",
+        "from sympy import sieve\n",
+        "print([i for i in sieve.totientrange(7, 18)])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[6, 4, 6, 4, 10, 4, 12, 6, 8, 8, 16]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mLT-68shgiMq",
+        "outputId": "f6c13a77-9ed6-496e-a600-7c791fa70f26",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "source": [
+        "# nth prime n番目の素数\n",
+        "from sympy import prime\n",
+        "display(prime(10))\n",
+        "display(prime(1))\n",
+        "display(prime(100000))\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "29"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "31"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "1299709"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wTN69IROhdB0",
+        "outputId": "3ede2fa6-8326-43e6-d217-59cf0cc749bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        }
+      },
+      "source": [
+        "#primepi n を含み n より小さい素数の数 primepi(10) => 2,3,5,7 => 4 個\n",
+        "from sympy import *\n",
+        "n = 10\n",
+        "primepi(n)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 4$",
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vuJW8kFXif3N",
+        "outputId": "c6e7f575-1f71-4e3e-9fbd-538eb501a05d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "source": [
+        "# 対数積分 logarithmic integral function\n",
+        "from sympy import *\n",
+        "n = 10\n",
+        "print(li(n))\n",
+        "li(n).evalf()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "li(10)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 6.1655995047873$",
+            "text/plain": [
+              "6.16559950478730"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XNrNgXrSnCWA",
+        "outputId": "95cf87f3-73ba-443f-c54b-6e4bc7f5ad23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# nextprime\n",
+        "from sympy import nextprime\n",
+        "[(i,nextprime(i)) for i in range (10,15)]"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(10, 11), (11, 13), (12, 13), (13, 17), (14, 17)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4nYPcrIn6ikF",
+        "outputId": "f6ed580c-8a48-4d98-c223-f1f233488823",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# prevprime\n",
+        "from sympy import prevprime\n",
+        "[(i,prevprime(i)) for i in range (10,15)]"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(10, 7), (11, 7), (12, 11), (13, 11), (14, 13)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bx1vhGm765qp",
+        "outputId": "fcd4dd52-fbfe-4e58-f2e5-bf148f91c6e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# primerange, sieve\n",
+        "from sympy import primerange, sieve\n",
+        "print([i for i in primerange(1,30)])\n",
+        "print([i for i in sieve.primerange(1,30)])\n",
+        "print(list(sieve.primerange(1,30)))\n"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n",
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n",
+            "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AH-r7BSY7Zeg",
+        "outputId": "7b6987d0-093b-4662-9cd2-1c8be8bba146",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# randprime, isprime\n",
+        "from sympy import randprime, isprime\n",
+        "print(randprime(1,30))\n",
+        "print(isprime(randprime(1,30)))"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "17\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
