Colaboratory を使用して作成しました

--- a/algebra_hazama.ipynb
+++ b/algebra_hazama.ipynb
@@ -35,6 +35,7 @@
     "colab": {
       "name": "algebra_hazama.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -95,23 +96,58 @@
         "id": "-GtCUCC89U1I",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 60
+          "height": 38
         },
-        "outputId": "3fa850d2-2acf-4060-a8b3-f0654db73e8f"
+        "outputId": "53f52ba2-8eb4-417d-ff6e-5cb2f1cf2f1f"
       },
       "source": [
+        "# 3 本線の合同 \\equiv, modular congruence を sympy でどう書くかわからないのでとりあえず Eqで代用する\n",
+        "from sympy.abc import *\n",
         "from sympy import *\n",
-        "display(x % 11)\n",
-        "Eq(Mod(x,11), y)"
+        "Eq(a % n , b % n)"
       ],
-      "execution_count": 102,
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle a\\bmod{n} = b\\bmod{n}$",
+            "text/plain": [
+              "Eq(Mod(a, n), Mod(b, n))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "76cFwoXueDeB",
+        "outputId": "617fb80b-1807-4899-8f64-19513b749fc6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 77
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "display(Eq(Mod(14,3),Mod(8,3)))\n",
+        "display(Eq(Mod(21,7),Mod(35,7)))\n",
+        "display(Eq(Mod(-29,11),Mod(15,11)))"
+      ],
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "$\\displaystyle x\\bmod{11}$",
+            "text/latex": "$\\displaystyle \\text{True}$",
             "text/plain": [
-              "Mod(x, 11)"
+              "True"
             ]
           },
           "metadata": {
@@ -119,32 +155,30 @@
           }
         },
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
-            "text/latex": "$\\displaystyle x\\bmod{11} = y$",
+            "text/latex": "$\\displaystyle \\text{True}$",
             "text/plain": [
-              "Eq(Mod(x, 11), y)"
+              "True"
             ]
           },
           "metadata": {
             "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{True}$",
+            "text/plain": [
+              "True"
+            ]
           },
-          "execution_count": 102
+          "metadata": {
+            "tags": []
+          }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dnE0OjHY9mBq"
-      },
-      "source": [
-        "from sympy.abc import *\n",
-        "from  sympy import *\n",
-        "b.Contains(a)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -184,12 +218,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "e9IQBRB-9U1K",
-        "outputId": "6ef22e0c-dbc8-40c6-9901-6b319a34d346"
+        "outputId": "f850aa8c-b895-4368-e448-b8d999bc3a69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "100 % 32"
+        "100 % 12"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,6 +264,65 @@
             "tags": []
           },
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IzD6yRqwvfb9",
+        "outputId": "5b7517d1-0812-4245-c95c-4c890691f03b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        }
+      },
+      "source": [
+        "from sympy.abc import *\n",
+        "from sympy import *\n",
+        "display(Eq(a % n , b % n))\n",
+        "a= 100\n",
+        "b= -32\n",
+        "n= 12\n",
+        "display(Eq(a % n , b % n))\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a\\bmod{n} = b\\bmod{n}$",
+            "text/plain": [
+              "Eq(Mod(a, n), Mod(b, n))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{True}$",
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\text{True}$",
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
@@ -482,18 +578,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "rQVfyKtax3e8",
-        "outputId": "786ac7f3-2710-4e93-8233-ca571972404e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "786ac7f3-2710-4e93-8233-ca571972404e"
       },
       "source": [
         "from sympy.abc import x\n",
         "from sympy import *\n",
         "(((x + 1) % 2) + 1) % 2"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,18 +610,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "T92Wbm4DyDRt",
-        "outputId": "6d8f2e41-2492-43fd-ef11-482607ef4dba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "6d8f2e41-2492-43fd-ef11-482607ef4dba"
       },
       "source": [
         "from sympy.abc import *\n",
         "from sympy import *\n",
         "Eq(Mod(x,2), Mod(y,2))"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,16 +642,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "wHNW5tEf014E",
-        "outputId": "5764091b-21f6-4184-d236-1c9e83c539e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        }
+        },
+        "outputId": "5764091b-21f6-4184-d236-1c9e83c539e8"
       },
       "source": [
         "a ~ b"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
