Colaboratory を使用して作成しました

--- a/algebra_hazama.ipynb
+++ b/algebra_hazama.ipynb
@@ -126,12 +126,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "76cFwoXueDeB",
-        "outputId": "617fb80b-1807-4899-8f64-19513b749fc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 77
-        }
+        },
+        "id": "76cFwoXueDeB",
+        "outputId": "617fb80b-1807-4899-8f64-19513b749fc6"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -218,10 +218,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "e9IQBRB-9U1K",
-        "outputId": "f850aa8c-b895-4368-e448-b8d999bc3a69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f850aa8c-b895-4368-e448-b8d999bc3a69"
       },
       "source": [
         "100 % 12"
@@ -270,12 +270,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IzD6yRqwvfb9",
-        "outputId": "5b7517d1-0812-4245-c95c-4c890691f03b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 78
-        }
+        },
+        "id": "IzD6yRqwvfb9",
+        "outputId": "5b7517d1-0812-4245-c95c-4c890691f03b"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -469,12 +469,12 @@
       },
       "source": [
         "p.4  例 1.1  \n",
+        "\n",
         "3 と 9 を $\\boldsymbol Z_{10}$ の元とみると\n",
-        "\\begin{eqnarray}\n",
-        " 3 +_{10} 9 &=& 2 \\quad (12 を 10 で割った余りが 2 だから)\\\\\n",
-        " 3 -_{10} 9 &=& 4 \\quad (-6 を 10 で割った余りが 4 だから) \\\\\n",
-        " 3 \\times_{10} 9 &=& 7 \\quad (27 を 10 で割った余りが 7 だから)\n",
-        "\\end{eqnarray}"
+        "* $3 +_{10} 9 = 2 \\quad$ (12 を 10 で割った余りが 2 だから)\n",
+        "* $3 -_{10} 9 = 4 \\quad$ (-6 を 10 で割った余りが 4 だから) \n",
+        "* $3 \\times_{10} 9 = 7 \\quad (27 を 10 で割った余りが 7 だから)\n",
+        "$"
       ]
     },
     {
