--- a/cartesianproductipynb.ipynb
+++ b/cartesianproductipynb.ipynb
@@ -6,7 +6,7 @@
       "name": "cartesianproductipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPLC50X8zS2WaDPzHQ83orC",
+      "authorship_tag": "ABX9TyOLODjQ5euGnkgJJ16Z03Az",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,8 @@
         "# メモ\n",
         "\n",
         "デカルト積 直積 を求めるのは\n",
+        "内包表記でいいじゃん、と思うのだが\n",
+        "itertools の使い方とか、記事がたくさんある。\n",
         "\n",
         "```\n",
         "[(a,b) for a in A for b in B]\n",
@@ -185,7 +187,7 @@
         "\n",
         "print([(a,b) for a in A for b in B])"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,10 +203,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "M0sNQwtPGAVQ",
-        "outputId": "f5b29ef1-e241-4cd4-eb05-8d04bcdad522",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f5b29ef1-e241-4cd4-eb05-8d04bcdad522"
       },
       "source": [
         "# これも同じ\n",
@@ -219,7 +221,7 @@
         "\n",
         "print(AB)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,10 +236,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1YFQyydOx17W",
-        "outputId": "f8a2dc57-8a99-472c-e4d9-8c01b97e4886",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f8a2dc57-8a99-472c-e4d9-8c01b97e4886"
       },
       "source": [
         "# factorial\n",
@@ -247,7 +249,7 @@
         "print(math.exp(1))\n",
         "print(math.sqrt(2))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,10 +285,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "crCO--Un1fQX",
-        "outputId": "da190df8-6cd0-4ecb-954e-f6b3c3d40444",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "da190df8-6cd0-4ecb-954e-f6b3c3d40444"
       },
       "source": [
         "# \n",
@@ -297,7 +299,7 @@
         "\n",
         "print(permutations_count(4, 4)) # 24"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,10 +315,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-RggMi8919FU",
-        "outputId": "2e5abc9e-5f38-4bc9-cb94-287780f1555b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2e5abc9e-5f38-4bc9-cb94-287780f1555b"
       },
       "source": [
         "# scipy バージョン\n",
@@ -327,7 +329,7 @@
         "\n",
         "print(perm(4, 4, exact=True)) # 24"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,10 +355,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "B__BBBz52eP1",
-        "outputId": "ee58c60d-a344-4974-eed1-44a1ac0d5cf1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee58c60d-a344-4974-eed1-44a1ac0d5cf1"
       },
       "source": [
         "import itertools\n",
@@ -370,7 +372,7 @@
         "\n",
         "pprint.pprint(list(p))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,10 +399,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9tDP44322-bE",
-        "outputId": "fd43c3b6-486d-4579-a909-0f6d9ee5fda1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fd43c3b6-486d-4579-a909-0f6d9ee5fda1"
       },
       "source": [
         "# 同じもの\n",
@@ -412,7 +414,7 @@
         "for v in p:\n",
         "    print (v)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,10 +440,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "N_STQHf5350O",
-        "outputId": "29cd4870-cc74-4e24-d7be-6d64dab0826b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "29cd4870-cc74-4e24-d7be-6d64dab0826b"
       },
       "source": [
         "# 同じものが入っているとやっかいなので集合にしてみる。問題ない\n",
@@ -456,7 +458,7 @@
         "\n",
         "pprint.pprint(list(p))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,10 +494,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "y7gEvGcT4r_m",
-        "outputId": "ed5c1206-ec1b-4d64-9b59-3cafcb5f73a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ed5c1206-ec1b-4d64-9b59-3cafcb5f73a6"
       },
       "source": [
         "# 高速バージョン\n",
@@ -514,7 +516,7 @@
         "print(combinations_count(4, 0))\n",
         "# 1"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,10 +532,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "L3f0FcOu45Jq",
-        "outputId": "dbbb84ef-d214-4bc6-d522-1d5d7473dce1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbbb84ef-d214-4bc6-d522-1d5d7473dce1"
       },
       "source": [
         "l = ['a', 'b', 'c', 'd']\n",
@@ -560,7 +562,7 @@
         "print(len(c_list))\n",
         "# 6"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,10 +598,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1GME521b5J_6",
-        "outputId": "451ce2b5-0a97-4e77-a13c-ffe2f3483eec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "451ce2b5-0a97-4e77-a13c-ffe2f3483eec"
       },
       "source": [
         "h = itertools.combinations_with_replacement(l, 2)\n",
@@ -628,7 +630,7 @@
         "print(len(h_list))\n",
         "# 10"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
