--- a/algebra_ishimurasonokoipynb.ipynb
+++ b/algebra_ishimurasonokoipynb.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "algebra_ishimurasonokoipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP2D5lnjIIcKgDDcA7P2cz5",
+      "authorship_tag": "ABX9TyNdhoSpFWLBcFBhhAznbrF6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,8 +170,122 @@
         "\n",
         "5 で割り切れる自然数全体の集合 $A$\n",
         "\n",
-        "$A = \\{n \\;|\\; n=5m \\land m \\in \\boldsymbol N\\}$"
+        "$A = \\{n \\;|\\; n=5m \\land m \\in \\boldsymbol N\\}$\n",
+        "\n",
+        "不等式 $x^2+x-2\\leq 0$ を満たす整数全体の集合 $B$\n",
+        "\n",
+        "$B = \\{x \\;|\\; x^2+x-2\\leq 0 \\land x \\in Z\\}$\n",
+        "\n",
+        "不等式 $x^2+x-2\\leq 0$ を満たす実数全体の集合 $C$\n",
+        "\n",
+        "$C = \\{x \\;|\\; x^2+x-2\\leq 0 \\land x \\in R\\}$\n",
+        "\n",
+        "行列式の値が 1 であるような実数成分をもつ 2 次の正方行列全体 $M$\n",
+        "\n",
+        "$M = \\left \\{ A \\;|\\; A = \\begin{bmatrix} a & b \\\\ c & d \\end{bmatrix} \\land (a \\in R \\land b \\in R \\land c \\in R \\land d \\in R) \\land |A| = 1 \\right \\}$\n",
+        "\n",
+        "$M = \\left \\{ A \\;|\\; A = \\begin{bmatrix} a & b \\\\ c & d \\end{bmatrix} \\land (a,b,c,d \\in R) \\land ad - bc = 1 \\right \\}$\n",
+        "\n",
+        "$M = \\left \\{ A \\;|\\; A = \\begin{bmatrix} a & b \\\\ c & d \\end{bmatrix} \\land (a,b,c,d \\in R) \\land \\det A = 1 \\right \\}$"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PnuAS_JZoQv4"
+      },
+      "source": [
+        "---\n",
+        "3 で割ると余りが 1 である自然数全体の集合 $A$\n",
+        "\n",
+        "$A = \\{n \\;|\\; (n=(3 (m-1)+1)) \\land m \\in \\boldsymbol N\\}$\n",
+        "\n",
+        "$A = \\{n \\;|\\; n=3m+1 \\land (m = 0,1,2,\\cdots)\\}$\n",
+        "\n",
+        "$A = \\{n \\;|\\; n=3m+1 \\land (m \\in \\boldsymbol N \\lor m = 0)\\}$\n",
+        "\n",
+        "不等式 $x^2+2x-1\\leq 0$ を満たす整数全体の集合 $B$\n",
+        "\n",
+        "$B = \\{x \\;|\\; x^2+2x-1\\leq 0 \\land x \\in Z\\}$\n",
+        "\n",
+        "不等式 $x^2+2x-1\\gt 0$ を満たす実数全体の集合 $C$\n",
+        "\n",
+        "$C = \\{x \\;|\\; x^2+2x-1\\gt 0 \\land x \\in R\\}$\n",
+        "\n",
+        "実数成分をもつ 2 次の正方行列の中で、逆行列が存在するもの全体 $M$\n",
+        "\n",
+        "$M = \\left \\{ A \\;|\\; A = \\begin{bmatrix} a & b \\\\ c & d \\end{bmatrix} \\land (a \\in R \\land b \\in R \\land c \\in R \\land d \\in R) \\land |A| \\neq 0 \\right \\}$\n",
+        "\n",
+        "$M = \\left \\{ A \\;|\\; A = \\begin{bmatrix} a & b \\\\ c & d \\end{bmatrix} \\land (a,b,c,d \\in R) \\land ad - bc \\neq 0 \\right \\}$\n",
+        "\n",
+        "$M = \\left \\{ A \\;|\\; A = \\begin{bmatrix} a & b \\\\ c & d \\end{bmatrix} \\land (a,b,c,d \\in R) \\land A^{-1}A = 1 \\right \\}$\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ftT04-Dwsv4J",
+        "outputId": "6ebf66d1-326f-43dc-ff71-36b2fbe36199",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "source": [
+        "%%latex\n",
+        "\\forall \\\\\n",
+        "\\exists"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\n\\forall \\\\\n\\exists",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FOstPDDzs5Zl"
+      },
+      "source": [
+        "---\n",
+        "$\\forall x \\in \\boldsymbol R ,\\quad x^2 \\geq 0$\n",
+        "\n",
+        "すべての実数は 2 乗すると正または 0 である。\n",
+        "\n",
+        "メモ $\\quad$ この論理式のカンマは $\\land$ には書き換えられない。 カンマの意味が不明なので\n",
+        "\n",
+        "$\\forall x \\in \\boldsymbol R \\quad [x^2 \\geq 0]$\n",
+        "\n",
+        "もしくは\n",
+        "\n",
+        "$\\forall x \\in \\boldsymbol R \\quad x^2 \\geq 0$\n",
+        "\n",
+        "とすべきなのではないか。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UlCFBKtZt-Xi"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
