--- a/cpp_aizuonline01.ipynb
+++ b/cpp_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqgKY5HVIA2d7xAneJJPXc",
+      "authorship_tag": "ABX9TyOoaDr0FB9evp/gY+/A00yD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,10 @@
       "source": [
         "# メモ\n",
         "\n",
-        "1. このノートブックは Colab で書かれて、読まれることを想定している。\n",
-        "1. 今回のアイデアはAOJ (Aizu Online Judge) のコース問題を Colab化してみよう、というもの。\n",
+        "1. このノートブックは colab で読まれることを想定している。\n",
+        "1. 今回のアイデアは AOJ (Aizu Online Judge) のコース問題を colab 化してみよう、というもの。\n",
         "1. Aizu Online Judge https://onlinejudge.u-aizu.ac.jp/courses/list\n",
-        "1. プログラム言語はC++を使う"
+        "1. プログラム言語は c++を使う"
       ]
     },
     {
@@ -60,20 +60,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pGCikRlD4c0G"
-      },
-      "source": [
-        "# ITP1 Introduction to Programming I プログラミング入門\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "oFZ0BDtT7Q-k"
       },
       "source": [
-        "### ITP1_1_A: Hello World  \n",
+        "---\n",
+        "ITP1_1_A: Hello World  \n",
         "\n",
         "\"Hello World\" と一行に出力する。"
       ]
@@ -85,21 +76,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "prf6Ks5V741Q",
-        "outputId": "59b9ad64-7f42-4d30-fa82-87e00f1a39dd"
+        "outputId": "0d846061-82fe-4579-be41-9038f0f6eb21"
       },
       "source": [
-        "%%writefile hello01.cpp\n",
+        "%%writefile temp.cpp\n",
         "#include <iostream>\n",
         "int main (){\n",
         "  std::cout << \"Hello World\"<< \"\\n\";\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Overwriting hello01.cpp\n"
+            "Writing temp.cpp\n"
           ],
           "name": "stdout"
         }
@@ -112,12 +103,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WjtbClzP0TQs",
-        "outputId": "b79c784c-7a94-4266-85e9-775e05e3c63c"
+        "outputId": "5b9c9a90-40cc-440c-f673-1b68d316ac11"
       },
       "source": [
-        "!g++ hello01.cpp -o hello01; ./hello01"
+        "!g++ temp.cpp -o temp; ./temp"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,9 +125,10 @@
         "id": "aGd4C-NC9mdn"
       },
       "source": [
-        "### ITP1_1_B: X Cubic\n",
+        "---\n",
+        "ITP1_1_B: X Cubic\n",
         "\n",
-        "$x$ の３乗の計算結果を１行に出力する。"
+        "$x$ の 3 乗の計算結果を１行に出力する。"
       ]
     },
     {
@@ -146,24 +138,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gNacblgN9fTg",
-        "outputId": "5c74b6e0-ea04-4848-ba36-d5ea2dcdfa61"
+        "outputId": "a5ae8bae-2f2e-4ede-beb1-0d8d2fab87a0"
       },
       "source": [
-        "%%writefile xcubic01.cpp\n",
+        "%%writefile temp.cpp\n",
         "#include <iostream>\n",
         "\n",
         "int main (){\n",
         "    int x;\n",
         "    std::cin >> x;\n",
         "    std::cout << x*x*x << \"\\n\";\n",
-        "}\n"
+        "}"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Writing xcubic01.cpp\n"
+            "Overwriting temp.cpp\n"
           ],
           "name": "stdout"
         }
@@ -176,12 +168,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NnwRLR_f90hp",
-        "outputId": "62627935-a1ea-4597-a800-ac0ee406dd22"
+        "outputId": "a0dc6536-65e2-4f69-b575-1c588054d54d"
       },
       "source": [
-        "!g++ xcubic01.cpp -o xcubic01; echo 10 | ./xcubic01"
+        "!g++ temp.cpp -o temp; echo 10 | ./temp"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +190,7 @@
         "id": "r_VmKM4-qM2A"
       },
       "source": [
-        "上記の例で、echo 10 としているのは標準入力を使っている。  \n",
+        "メモ $\\quad$ 上記の例で、echo 10 としているのは標準入力を使っている。  \n",
         "\n",
         "Colab の環境でインタラクティブにプログラムを動かすことも可能なようだが、ノートブックのコードセルからインタラクティブな入力欄にフォーカスを手動で移動する必要があり、あまり実用的ではない。\n",
         "\n",
@@ -4185,7 +4177,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4208,7 +4200,7 @@
       "source": [
         "!g++ insertionsort.cpp -o insertionsort; echo 6 5 2 4 6 1 3 |./insertionsort"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
